--- a/app/locale/nl_NL/template/email/admin_password_new.html
+++ b/app/locale/nl_NL/template/email/admin_password_new.html
@@ -4,7 +4,7 @@
 "var logo_url":"Email Logo Image Url",
 "var logo_alt":"Email Logo Image Alt",
 "htmlescape var=$user.name":"Admin Name",
-"htmlescape var=$password":"Admin Password",
+"htmlescape var=$user.password":"Admin New Password",
 "store url=\"adminhtml/system_account/\"":"Admin Account Url"}
 @-->
 
@@ -17,8 +17,8 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{htmlescape var=$user.name}},</h1>
-            <p><strong>uw nieuwe wachtwoord is:</strong> {{htmlescape var=$password}}</p>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$user.name}}</h1>
+            <p><strong>Uw nieuwe wachtwoord is:</strong> {{htmlescape var=$user.password}}</p>
             <p>U kunt uw wachtwoord op ieder gewenst moment aanpassen wanneer u <a href="{{store url="adminhtml/system_account/"}}">inlogt</a> op onze webshop.</p>
         </td>
     </tr>
