--- a/app/locale/nl_NL/template/email/log_clean_warning.html
+++ b/app/locale/nl_NL/template/email/log_clean_warning.html
@@ -1,7 +1,10 @@
-<!--@subject Log Cleanup Warnings @-->
+<!--@subject Waarschuwingen voor logboekopruiming @-->
 <!--@vars
 {"var warnings":"Log Cleanup Warnings"}
 @-->
-Log Cleanup Warnings:
+{{template config_path="design/email/header"}}
 
+Waarschuwingen bij het opschonen van het logboek: <br /><br />
 {{var warnings}}
+
+{{template config_path="design/email/footer"}}
