--- a/app/locale/nl_NL/template/email/payment_failed.html
+++ b/app/locale/nl_NL/template/email/payment_failed.html
@@ -12,7 +12,7 @@
 "var paymentMethod":"Payment Method",
 "var dateAndTime":"Date and Time of Transaction"}
 @-->
-
+{{template config_path="design/email/header"}}
 <table>
     <thead>
     <tr>
@@ -66,3 +66,4 @@
     </tr>
     </tbody>
 </table>
+{{template config_path="design/email/footer"}}
