--- a/app/locale/nl_NL/template/email/webforms/reply.html
+++ b/app/locale/nl_NL/template/email/webforms/reply.html
@@ -1,6 +1,6 @@
 <!--@subject Re: {{var result.subject}} @-->
 
-<p>Beste {{var customer.name}},</p>
+<p>{{block type="cms/block" block_id="email_template_say_hello"}} {{var customer.name}},</p>
 
 {{var reply.message}}
 
