--- a/app/locale/nl_NL/template/email/wishlist_share.html
+++ b/app/locale/nl_NL/template/email/wishlist_share.html
@@ -3,9 +3,11 @@
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
 "var logo_alt":"Email Logo Image Alt",
+"var store.getFrontendName()":"Store Name",
 "var message":"Wishlist Message",
 "var items":"Wishlist Items"}
 @-->
+
 <!--@styles
 @-->
 
@@ -14,24 +16,18 @@
 
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
+        <td class="action-content">
+            <h1>Goedendag, bekijk mijn verlanglijst in de online shop {{var store.getFrontendName()}}.</h1>
+            <table cellspacing="0" cellpadding="0" class="message-container">
                 <tr>
-                    <td class="action-content">
-                        <h1>Goedendag, </h1>
-                        <table cellspacing="0" cellpadding="0" class="message-container">
-                            <tr>
-                                <td>{{var message}}</td>
-                            </tr>
-                        </table>
-                        {{var items}}
-                        {{depend salable}}
-                        <p><strong><a href="{{var addAllLink}}">Alle producten aan winkelwagen toevoegen.</a></strong> |
-                        {{/depend}}
-                        <strong><a href="{{var viewOnSiteLink}}">Alle producten van de verlanglijst bekijken.</a></strong></p>
-                    </td>
+                    <td>{{var message}}</td>
                 </tr>
             </table>
+            {{var items}}
+            {{depend salable}}
+            <p><strong><a href="{{var addAllLink}}">Alle producten aan winkelwagen toevoegen</a>!</strong> |
+            {{/depend}}
+            <strong><a href="{{var viewOnSiteLink}}">Alle producten van de verlanglijst bekijken</a>!</strong></p>
         </td>
     </tr>
 </table>
