--- a/app/locale/nl_NL/template/email/account_new.html
+++ b/app/locale/nl_NL/template/email/account_new.html
@@ -2,10 +2,9 @@
 <!--@vars
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
+"var logo_alt":"Email Logo Image Alt",
 "htmlescape var=$customer.name":"Customer Name",
-"store url=\"customer/account/\"":"Customer Account Url",
-"var customer.email":"Customer Email",
-"htmlescape var=$customer.password":"Customer Password"}
+"store url=\"customer/account/\"":"Customer Account Url"}
 @-->
 
 <!--@styles
@@ -17,13 +16,9 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{htmlescape var=$customer.name}},</h1>
-            <p>Bedankt voor uw registratie bij {{var store.getFrontendName()}}. Om toegang te krijgen tot uw account, kunt u bovenaan iedere pagina op onze webshop klikken op <a href="{{store url="customer/account/"}}">Log in</a> of <a href="{{store url="customer/account/"}}">Mijn account</a>. Uw inloggegevens bestaan uit uw e-mailadres en het wachtwoord dat u heeft opgegeven bij registratie.</p>
-            <p class="highlighted-text">
-                Gebruik de volgende gegevens om in te loggen:<br/>
-                <strong>E-Mail:</strong> {{var customer.email}}<br/>
-                <strong>Wachtwoord:</strong> {{htmlescape var=$customer.password}}
-            </p>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$customer.name}}</h1>
+            <p>Bedankt voor uw registratie bij {{var store.getFrontendName()}}.</p>
+            <p>Om toegang te krijgen tot uw account, kunt u bovenaan iedere pagina op onze webshop klikken op <a href="{{store url="customer/account/"}}">Log in</a> of <a href="{{store url="customer/account/"}}">Mijn account</a>. Uw inloggegevens bestaan uit uw e-mailadres en het wachtwoord dat u heeft opgegeven bij registratie.</p>
             <p>Wanneer u ingelogd bent kunt u:</p>
             <ul>
                 <li>Het betaalproces sneller afronden.</li>
@@ -34,8 +29,7 @@
                 <li>Verschillende verzendadressen opslaan om een bestelling naar verschillende adressen te versturen. Handig voor het sturen van cadeau's naar vrienden en familie!</li>
             </ul>
             <p>
-                Indien u nog vragen heeft, kunt u contact met ons opnemen via email door een bericht te sturen naar <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                {{depend store_phone}} of telefonisch via <a href="tel:{{var phone}}">{{var store_phone}}</a>{{/depend}}.
+                {{block type="cms/block" block_id="email_template_contact"}}
             </p>
         </td>
     </tr>
