--- a/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
+++ b/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
@@ -16,17 +16,18 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{htmlescape var=$customer.name}},</h1>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$customer.name}}</h1>
             <p>Er is een verzoek geweest om het wachtwoord van uw account te wijzigen.</p>
-            <p>Als u dit verzoek zelf heeft gedaan, kunt u op de volgende link klikken om uw wachtwoord te wijzigen: </p>
-            <table cellspacing="0" cellpadding="0" class="action-button" >
+            <p>Als u dit verzoek zelf heeft gedaan, kunt u op de volgende link klikken om uw wachtwoord te wijzigen:</p>
+            <table cellspacing="0" cellpadding="0" class="action-button">
                 <tr>
                     <td>
                         <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}"><span>Wachtwoord wijzigen</span></a>
                     </td>
                 </tr>
             </table>
-            <p>Als u niet zelf het verzoek om uw wachtwoord te wijzigen heeft gedaan, kunt u deze e-mail negeren. Uw wachtwoord blijft dan hetzelfde.</p>
+            <p>Als de link niet werkt, kopieer de link dan en plak deze rechtstreeks in de adresbalk van uw browser.</p>
+            <p>Als u niet zelf het verzoek om uw wachtwoord te wijzigen heeft gedaan, kunt u deze e-mail negeren. Uw wachtwoord blijft dan hetzelfde!</p>
         </td>
     </tr>
 </table>
