--- a/app/locale/nl_NL/template/email/admin_password_reset_confirmation.html
+++ b/app/locale/nl_NL/template/email/admin_password_reset_confirmation.html
@@ -17,8 +17,9 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{htmlescape var=$user.name}},</h1>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$user.name}}</h1>
             <p>Er is een verzoek geweest om het wachtwoord van uw account te wijzigen.</p>
+            <p>U kunt het wachtwoord wijzigen wanneer u zich <a href="{{store url="adminhtml/system_account/"}}">aanmeldt bij uw account</a>.</p>
             <p>Als u dit verzoek zelf heeft gedaan, kunt u op de volgende link klikken om uw wachtwoord te wijzigen:</p>
             <table cellspacing="0" cellpadding="0" class="action-button">
                 <tr>
@@ -27,6 +28,7 @@
                     </td>
                 </tr>
             </table>
+            <p>Als de link niet werkt, kopieer de link dan en plak deze rechtstreeks in de adresbalk van uw browser.</p>
             <p>Als u niet zelf het verzoek om uw wachtwoord te wijzigen heeft gedaan, kunt u deze e-mail negeren. Uw wachtwoord blijft dan hetzelfde.</p>
         </td>
     </tr>
