--- a/app/locale/nl_NL/template/email/awrma/basecustomer.html
+++ b/app/locale/nl_NL/template/email/awrma/basecustomer.html
@@ -2,7 +2,7 @@
 <!--@styles
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
-<p>Dear {{var request.getCustomerName()}}!<p>
+<p>{{block type="cms/block" block_id="email_template_say_hello"}} {{var request.getCustomerName()}}!<p>
 {{var content}}
 {{depend request.getNotifyHasComment()}}
 {{var depname}}:<br />
