--- a/app/locale/nl_NL/template/email/currency_update_warning.html
+++ b/app/locale/nl_NL/template/email/currency_update_warning.html
@@ -1,7 +1,10 @@
-<!--@subject Currency Update Warnings @-->
+<!--@subject Valuta-update waarschuwing @-->
 <!--@vars
 {"var warnings":"Currency Update Warnings"}
 @-->
-Valuta-update waarschuwing:
+{{template config_path="design/email/header"}}
 
+Valuta-update waarschuwing: <br />
 {{var warnings}}
+
+{{template config_path="design/email/footer"}}
