--- a/app/locale/nl_NL/template/email/password_new.html
+++ b/app/locale/nl_NL/template/email/password_new.html
@@ -3,10 +3,11 @@
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
 "var logo_alt":"Email Logo Image Alt",
-"store url=\"customer/account/\"":"Customer Account Url",
 "htmlescape var=$customer.name":"Customer Name",
-"htmlescape var=$customer.password":"Customer New Password"}
+"htmlescape var=$customer.password":"Customer New Password",
+"store url=\"customer/account/\"":"Customer Account Url"}
 @-->
+
 <!--@styles
 @-->
 
@@ -16,7 +17,7 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{htmlescape var=$customer.name}},</h1>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$customer.name}}</h1>
             <p><strong>Uw nieuwe wachtwoord is:</strong> {{htmlescape var=$customer.password}}</p>
             <p>U kunt uw wachtwoord op ieder gewenst moment aanpassen wanneer u <a href="{{store url="customer/account/"}}">inlogt</a> op onze webshop.</p>
         </td>
