--- a/app/locale/nl_NL/template/email/product_alert_cron_error.html
+++ b/app/locale/nl_NL/template/email/product_alert_cron_error.html
@@ -1,7 +1,11 @@
-<!--@subject Product alerts Cron error @-->
+<!--@subject Produkt meldet Cron-Warnmeldungen @-->
 <!--@vars
 {"var warnings":"Warnings"}
 @-->
-Product alerts cron warnings:
+{{template config_path="design/email/header"}}
+
+Produkt meldet Cron-Warnmeldungen: <br /><br />
 
 {{var warnings}}
+
+{{template config_path="design/email/footer"}}
