--- a/app/locale/nl_NL/template/email/product_stock_alert.html
+++ b/app/locale/nl_NL/template/email/product_stock_alert.html
@@ -9,7 +9,7 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Beste {{var customerName}},</h1>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{var customerName}},</h1>
 			<p>Wij willen de volgende voorraadwijzingen aan u doorgeven:</p>
 
             {{var alertGrid}}
