--- a/app/locale/nl_NL/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/nl_NL/template/email/rewardsref/referral_subscribe.html
@@ -14,7 +14,7 @@
                 <!-- [ middle starts here] -->
                 <tr>
                     <td valign="top">
-                        <p style="font-size:12px; line-height:16px; margin:0 0 16px 0;">Beste {{var referral.referral_name}},</p>
+                        <p style="font-size:12px; line-height:16px; margin:0 0 16px 0;">{{block type="cms/block" block_id="email_template_say_hello"}} {{var referral.referral_name}},</p>
                         <p style="font-size:12px; line-height:16px; margin:0 0 16px 0;">{{var affiliate.name}} ({{var affiliate.email}}) wil u uitnodigen op <a href="{{var affiliate_url}}">{{var store_name}}</a></p>
                         <p style="font-size:12px; line-height:16px; margin:0;">{{var affiliate.name}}'s bericht: <br /> {{var msg}}</p>
                     </td>
