--- a/app/locale/nl_NL/template/email/sales/creditmemo_new.html
+++ b/app/locale/nl_NL/template/email/sales/creditmemo_new.html
@@ -8,13 +8,14 @@
 "store url=\"customer/account/\"":"Customer Account Url",
 "var creditmemo.increment_id":"Credit Memo Id",
 "var order.increment_id":"Order Id",
-"var order.billing_address.format('html')":"Billing Address",
-"payment_html":"Payment Details",
-"var order.shipping_address.format('html')":"Shipping Address",
-"var order.shipping_description":"Shipping Description",
+"var order.getBillingAddress().format('html')":"Billing Address",
+"var payment_html":"Payment Details",
+"var order.getShippingAddress().format('html')":"Shipping Address",
+"var order.getShippingDescription()":"Shipping Description",
 "layout handle=\"sales_email_order_creditmemo_items\" creditmemo=$creditmemo order=$order":"Credit Memo Items Grid",
 "var comment":"Credit Memo Comment"}
 @-->
+
 <!--@styles
 @-->
 
@@ -23,36 +24,19 @@
 
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="email-heading">
-                        <h1>Beste {{htmlescape var=$order.getCustomerName()}},</h1>
-						<p>Bedankt voor uw bestelling bij {{var store.getFrontendName()}}.</p>
-                        <p>U kunt de status van uw bestelling bekijken door in te loggen op <a href="{{store url="customer/account/"}}">uw account</a>.</p>
-                    </td>
-                    <td class="store-info">
-                        <h4>Heeft u vragen over uw bestelling?</h4>
-                        <p>
-                            {{depend store_phone}}
-                            <b>Bel ons:</b>
-                            <a href="tel:{{var phone}}">{{var store_phone}}</a><br>
-                            {{/depend}}
-                            {{depend store_hours}}
-                            <span class="no-link">{{var store_hours}}</span><br>
-                            {{/depend}}
-                            {{depend store_email}}
-                            <b>E-Mail:</b> <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                            {{/depend}}
-                        </p>
-                    </td>
-                </tr>
-            </table>
+        <td class="email-heading">
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$order.getCustomerName()}}</h1>
+            <p>Bedankt voor uw bestelling bij <em>{{var store.getFrontendName()}}</em>.</p>
+            <p>U kunt de status van uw bestelling controleren door in te loggen op <a href="{{store url="customer/account/"}}">uw account</a>.</p>
+        </td>
+        <td class="store-info">
+{{template config_path="design/email/support"}}
         </td>
     </tr>
     <tr>
         <td class="order-details">
-            <h3>Creditnota #{{var creditmemo.increment_id}} voor Bestelling #{{var order.increment_id}}</h3>
+            <h3>Creditnota <span class="no-link"># {{var creditmemo.increment_id}}</span></h3>
+            <p>voor Bestelling <span class="no-link"># {{var order.increment_id}}</span></p>
         </td>
     </tr>
     <tr class="order-information">
@@ -69,26 +53,26 @@
                 <tr>
                     <td class="address-details">
                         <h6>Factuurgegevens:</h6>
-                        <p><span class="no-link">{{var order.billing_address.format('html')}}</span></p>
+                        <p><span class="no-link">{{var order.getBillingAddress().format('html')}}</span></p>
                     </td>
                     {{depend order.getIsNotVirtual()}}
                     <td class="address-details">
                         <h6>Adresgegevens:</h6>
-                        <p><span class="no-link">{{var order.shipping_address.format('html')}}</span></p>
+                        <p><span class="no-link">{{var order.getShippingAddress().format('html')}}</span></p>
                     </td>
                     {{/depend}}
                 </tr>
                 <tr>
-                    {{depend order.getIsNotVirtual()}}
-                    <td class="method-info">
-                        <h6>Verzendwijze:</h6>
-                        <p>{{var order.shipping_description}}</p>
-                    </td>
-                    {{/depend}}
                     <td class="method-info">
                         <h6>Betaalwijze:</h6>
                         {{var payment_html}}
                     </td>
+                    {{depend order.getIsNotVirtual()}}
+                    <td class="method-info">
+                        <h6>Verzendwijze:</h6>
+                        <p>{{var order.getShippingDescription()}}</p>
+                    </td>
+                    {{/depend}}
                 </tr>
             </table>
         </td>
