--- a/app/locale/nl_NL/template/email/sales/order_new.html
+++ b/app/locale/nl_NL/template/email/sales/order_new.html
@@ -15,6 +15,7 @@
 "layout handle=\"sales_email_order_items\" order=$order":"Order Items Grid",
 "var order.getEmailCustomerNote()":"Email Order Note"}
 @-->
+
 <!--@styles
 @-->
 
@@ -23,36 +24,18 @@
 
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="email-heading">
-                        <h1>Beste {{htmlescape var=$order.getCustomerName()}},</h1>
-						<p>Bedankt voor uw bestelling bij {{var store.getFrontendName()}}.</p>
-                        <p>Zodra uw bestelling wordt verzonden, ontvangt u een email met een link om uw bestelling te volgen. Een samenvatting van uw bestelling vindt u hieronder. Nogmaals bedankt voor uw bestelling.</p>
-                    </td>
-                    <td class="store-info">
-                        <h4>Heeft u vragen over uw bestelling?</h4>
-                        <p>
-                            {{depend store_phone}}
-                            <b>Bel ons:</b>
-                            <a href="tel:{{var phone}}">{{var store_phone}}</a><br>
-                            {{/depend}}
-                            {{depend store_hours}}
-                            <span class="no-link">{{var store_hours}}</span><br>
-                            {{/depend}}
-                            {{depend store_email}}
-                            <b>E-Mail:</b> <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                            {{/depend}}
-                        </p>
-                    </td>
-                </tr>
-            </table>
+        <td class="email-heading">
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$order.getCustomerName()}}</h1>
+            <p>Bedankt voor uw bestelling bij <em>{{var store.getFrontendName()}}</em>.</p>
+            <p>Zodra uw bestelling wordt verzonden, ontvangt u een email met een link om uw bestelling te volgen. Een samenvatting van uw bestelling vindt u hieronder. Nogmaals bedankt voor uw bestelling!</p>
+        </td>
+        <td class="store-info">
+{{template config_path="design/email/support"}}
         </td>
     </tr>
     <tr>
         <td class="order-details">
-            <h3>Uw bestelling met bestelnummer <span class="no-link">#{{var order.increment_id}}</span></h3>
+            <h3>Uw bestelling met bestelnummer <span class="no-link"># {{var order.increment_id}}</span></h3>
             <p>Geplaatst op {{var order.getCreatedAtFormated('long')}}</p>
         </td>
     </tr>
@@ -80,16 +63,16 @@
                     {{/depend}}
                 </tr>
                 <tr>
-                    {{depend order.getIsNotVirtual()}}
-                    <td class="method-info">
-                        <h6>Verzendwijze:</h6>
-                        <p>{{var order.shipping_description}}</p>
-                    </td>
-                    {{/depend}}
                     <td class="method-info">
                         <h6>Betaalwijze:</h6>
                         {{var payment_html}}
                     </td>
+                    {{depend order.getIsNotVirtual()}}
+                    <td class="method-info">
+                        <h6>Verzendwijze:</h6>
+                        <p>{{var order.getShippingDescription()}}</p>
+                    </td>
+                    {{/depend}}
                 </tr>
             </table>
         </td>
