--- a/app/locale/nl_NL/template/email/sitemap_generate_warning.html
+++ b/app/locale/nl_NL/template/email/sitemap_generate_warning.html
@@ -1,7 +1,10 @@
-<!--@subject Sitemap generate Warnings @-->
+<!--@subject Warnungen bei der Sitemap-Erstellung @-->
 <!--@vars
 {"var warnings":"Sitemap Generate Warnings"}
 @-->
+{{template config_path="design/email/header"}}
 
-Sitemap generate warnings:
+Warnungen bei der Sitemap-Erstellung: <br />
 {{var warnings}}
+
+{{template config_path="design/email/footer"}}
