--- a/app/locale/nl_NL/template/email/token.html
+++ b/app/locale/nl_NL/template/email/token.html
@@ -1,4 +1,4 @@
-<!--@subject Welkom, {{var name}} @-->
+<!--@subject Autorisatie: status gewijzigd in {{var name}} @-->
 <!--@vars
 {"htmlescape var=$userName":"User name",
 "var $applicationName":"Application name",
@@ -10,8 +10,8 @@
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td class="action-content">
-            <h1>Hallo, {{htmlescape var=$userName}}</h1>
-            <p>Uw toegang tot <b>{{htmlescape var=$applicationName}}</b> is veranderd naar: <b>{{htmlescape var=$status}}</b> door de administrator.</p>
+            <h1>{{block type="cms/block" block_id="email_template_say_hello"}} {{htmlescape var=$userName}}</h1>
+            <p>Uw toegang tot <b>{{htmlescape var=$applicationName}}</b> is veranderd naar <b>{{htmlescape var=$status}}</b> door de administrator.</p>
         </td>
     </tr>
 </table>
